미사용폰트 삭제, 버튼호버효과변경, 스크롤 이벤트 조건 수정

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <nav class="pc-nav large-only">
           <ul id="gnb"> <!-- large-only -->
-            <li><a href="#home">HOME</a></li>
+            <li><a href="#home" class="active_pc">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#skill">SKILL</a></li>
             <li><a href="#portfolio">PORTFOLIO</a></li>
@@ -346,7 +346,7 @@
                   홈페이지 리뉴얼을 주제로 작업한 개인 프로젝트입니다. 신간과 베스트셀러를 소개하고 민음사의 자체 콘텐츠를 소개합니다.
                 </div>
                 <div class="link-btn">
-                  <a href="https://github.com/song-tiigger/minumsa" target="_blank"><button>페이지 보기</button></a>
+                  <a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a>
                 </div>
               </div> <!-- pofol-info -->
             </div> <!-- flexbox -->
@@ -367,7 +367,7 @@
                 </div>
                 <div class="link-btn">
                   <button>디자인 가이드</button>
-                  <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
+                  <a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a>
 
                 </div>
               </div> <!-- pofol-info -->
@@ -388,7 +388,7 @@
                 </div>
                 <div class="link-btn">
                   <button>디자인 가이드</button>
-                  <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
+                  <a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a>
                 </div>
               </div> <!-- pofol-info -->
             </div> <!-- flexbox -->
@@ -408,7 +408,7 @@
                 </div>
                 <div class="link-btn">
                   <button>디자인 가이드</button>
-                  <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
+                  <a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a>
                 </div>
               </div> <!-- pofol-info -->
             </div> <!-- flexbox -->
@@ -426,7 +426,7 @@
                   25분 집중, 5분 휴식을 번갈아뽀모도로 타이머입니다. 집중 시간인 25분과 휴식 시간인 5분이 번갈아가며 흐릅니다. 시간이 줄어드는 기능을 구현했습니다.
                 </div>
                 <div class="link-btn">
-                  <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
+                  <a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a>
                 </div>
               </div>
             </div>
