뽀모도로 설명 수정, 포폴 썸네일 둥근모서리 추가

--- a/index.html
+++ b/index.html
@@ -423,7 +423,8 @@
                 <div>05</div>
                 <div class="pofol-title">뽀모도로 타이머</div>
                 <div class="pofol-des">
-                  25분 집중, 5분 휴식을 번갈아뽀모도로 타이머입니다. 집중 시간인 25분과 휴식 시간인 5분이 번갈아가며 흐릅니다. 시간이 줄어드는 기능을 구현했습니다.
+                  25분동안 집중하고, 5분 휴식을 취하는 뽀모도로 기법을 적용한 타이머 입니다.
+                  25분과 5분이 자동으로 전환됩니다.
                 </div>
                 <div class="link-btn">
                   <a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a>
