디자인가이드 추가, gnb배경 수정중

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                   홈페이지 리뉴얼을 주제로 작업한 개인 프로젝트입니다. 신간과 베스트셀러를 소개하고 민음사의 자체 콘텐츠를 소개합니다.
                 </div>
                 <div class="link-btn">
-                  <a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a>
+                  <a href="./works/pages/minumsa/index.html" target="_blank">페이지 보기</a>
                 </div>
               </div> <!-- pofol-info -->
             </div> <!-- flexbox -->
@@ -365,8 +365,8 @@
                   홈페이지의 서브메뉴에서 <strong>대관안내, 좌석배치도, 문화공간</strong> 페이지를 맡아서 제작했습니다.
                 </div>
                 <div class="link-btn">
-                  <button>디자인 가이드</button>
-                  <a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a>
+                  <a href="./works/pages/BlueSquare/design guide/pf2.html" target="_blank">디자인 가이드</a>
+                  <a href="https://applej07.cafe24.com/works/pages/BlueSquare/" target="_blank">페이지 보기</a>
 
                 </div>
               </div> <!-- pofol-info -->
