디자인가이드 완료, 버튼 호버 색 변경, 링크 연결(후에 사이트 연결로 수정하기)

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                   홈페이지의 서브메뉴에서 <strong>대관안내, 좌석배치도, 문화공간</strong> 페이지를 맡아서 제작했습니다.
                 </div>
                 <div class="link-btn">
-                  <a href="./works/pages/BlueSquare/design guide/pf2.html" target="_blank">디자인 가이드</a>
+                  <a href="./works/pages/BlueSquare/design guide/d_guide2.html" target="_blank">디자인 가이드</a>
                   <a href="https://applej07.cafe24.com/works/pages/BlueSquare/" target="_blank">페이지 보기</a>
 
                 </div>
@@ -386,8 +386,8 @@
                   간단한 자기소개, 학습한 기술과 작업물 소개로 구성되어있습니다.
                 </div>
                 <div class="link-btn">
-                  <button>디자인 가이드</button>
-                  <a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a>
+                  <a href="./design guide/d_guide3.html" target="_blank">디자인 가이드</a>
+                  <a href="./index.html">페이지 보기</a>
                 </div>
               </div> <!-- pofol-info -->
             </div> <!-- flexbox -->
@@ -406,8 +406,8 @@
                   메뉴 추가, 현금 지불, 거스름돈 계산이 가능합니다.
                 </div>
                 <div class="link-btn">
-                  <button>디자인 가이드</button>
-                  <a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a>
+                  <a href="./works/javascript/vending machine/design guide/js1.html" target="_blank">디자인 가이드</a>
+                  <a href="./works/javascript/vending machine/index.html" target="_blank">페이지 보기</a>
                 </div>
               </div> <!-- pofol-info -->
             </div> <!-- flexbox -->
@@ -426,7 +426,7 @@
                   25분과 5분이 자동으로 전환됩니다.
                 </div>
                 <div class="link-btn">
-                  <a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a>
+                  <a href="./works/javascript/javascript2/index.html" target="_blank">페이지 보기</a>
                 </div>
               </div>
             </div>
@@ -463,7 +463,7 @@
           <p>이메일을 클릭하면 Outlook이 활성화됩니다.</p>
 
           <div class="git">
-            <a href="https://github.com/song-tiigger/portfolio" target="_blank"><img src="./images/git.png" alt="깃허브 아이콘"></a>
+            <a href="https://github.com/song-tiigger" target="_blank"><img src="./images/git.png" alt="깃허브 아이콘"></a>
           </div>
 
           <div class="topbtn">
