깃 repo 연결 버튼 추가

--- a/index.html
+++ b/index.html
@@ -335,7 +335,8 @@
           <div class="pofol-box pofol-box1 left">
             <div class="flexbox">
               <div class="pofol-thumbnail">
-                <img src="images/minumsa.png" alt="">
+                <img src="images/minumsa.png" alt="민음사 썸네일">
+                <a href="https://github.com/song-tiigger/minumsa.git" target="_blank"><img class="git-repo" src="./images/git.png" alt="민음사 깃 리포지토리 연결"></a>
               </div> <!-- pofol-thumbnail -->
 
               <div class="pofol-info">
@@ -354,15 +355,16 @@
           <div class="pofol-box pofol-box2 right">
             <div class="flexbox">
               <div class="pofol-thumbnail">
-                <img src="images/bluesquare.png" alt="">
+                <img src="images/bluesquare.png" alt="블루스퀘어 썸네일">
+                <a href="https://github.com/song-tiigger/BlueSquare-hj.git" target="_blank"><img class="git-repo" src="./images/git.png" alt="블루스퀘어 깃 리포지토리 연결"></a>
               </div>
               <div class="pofol-info">
                 <div>02</div>
                 <div class="pofol-title">블루스퀘어</div>
                 <div class="pofol-des">
                   반응형으로 제작한 리뉴얼 웹사이트 입니다.
-                  조별 프로젝트로 진행된 작업이며,
-                  홈페이지의 서브메뉴에서 <strong>대관안내, 좌석배치도, 문화공간</strong> 페이지를 맡아서 제작했습니다.
+                  조별 프로젝트로 진행되었으며,
+                  서브메뉴에서 <strong>대관안내, 좌석배치도, 문화공간</strong> 페이지를 제작했습니다.
                 </div>
                 <div class="link-btn">
                   <a href="./works/pages/BlueSquare/design guide/d_guide2.html" target="_blank">디자인 가이드</a>
@@ -376,7 +378,8 @@
           <div class="pofol-box pofol-box3 left">
             <div class="flexbox">
               <div class="pofol-thumbnail">
-                <img src="images/profile.png" alt="">
+                <img src="images/profile.png" alt="프로필 포트폴리오 썸네알">
+                <a href="https://github.com/song-tiigger/Profile.git" target="_blank"><img class="git-repo" src="./images/git.png" alt="프로필 포트폴리오 깃 리포지토리 연결"></a>
               </div>
               <div class="pofol-info">
                 <div>03</div>
@@ -396,7 +399,8 @@
           <div class="pofol-box pofol-box4 right">
             <div class="flexbox">
               <div class="pofol-thumbnail">
-                <img src="images/coffeecat.png" alt="">
+                <img src="images/coffeecat.png" alt="자바스크립트 포트폴리오1 썸네일">
+                <a href="https://github.com/song-tiigger/javascript1.git" target="_blank"><img class="git-repo" src="./images/git.png" alt="자바스크립트 포트폴리오1 깃 리포지토리 연결"></a>
               </div>
               <div class="pofol-info">
                 <div>04</div>
@@ -406,7 +410,7 @@
                   메뉴 추가, 현금 지불, 거스름돈 계산이 가능합니다.
                 </div>
                 <div class="link-btn">
-                  <a href="./works/javascript/vending machine/design guide/js1.html" target="_blank">디자인 가이드</a>
+                  <a href="./works/javascript/vending machine/design guide/d_guide1.html" target="_blank">디자인 가이드</a>
                   <a href="./works/javascript/vending machine/index.html" target="_blank">페이지 보기</a>
                 </div>
               </div> <!-- pofol-info -->
@@ -416,7 +420,8 @@
           <div class="pofol-box pofol-box5 left">
             <div class="flexbox">
               <div class="pofol-thumbnail">
-                <img src="images/phomodoro.png" alt="뽀모도로 타이머">
+                <img src="images/phomodoro.png" alt="뽀모도로 타이머 썸네일">
+                <a href="https://github.com/song-tiigger/javascript2.git" target="_blank"><img class="git-repo" src="./images/git.png" alt="뽀모도로 타이머 깃 리포지토리 연결"></a>
               </div>
               <div class="pofol-info">
                 <div>05</div>
