meta태그 추가 입력

--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/index.css"> <!-- css 연결하기 -->
-  <script src="./js/jquery.js"></script>
-  <script src="./js/index.js"></script>
+  <!-- SEO -->
   <title>송하정</title>
+  <meta name="description" content="송하정의 퍼블리싱 포트폴리오 사이트" />
+  <meta name="author" content="송하정" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <!-- OG -->
+  <meta property="og:title" content="송하정의 포트폴리오">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://applej07.cafe24.com/">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <!-- CSS -->
+  <link rel="stylesheet" href="./css/index.css">
+  <!-- jQuery -->
+  <script src="./js/jquery.js"></script>
+  <!-- Javascript -->
+  <script src="./js/index.js"></script>
 </head>
 
 <body>
